--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.2.3",
     "clsx": "^2.1.0",
     "notistack": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   },
