--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "notistack": "^3.0.1",
     "path": "^0.12.7",
