--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
