--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 PORT=3000
 MONGO_URI=mongodb+srv://a1byn:a169n005@daryntech.jxuelry.mongodb.net/kazakhLiteracyBoost_db?retryWrites=true&w=majority
 JWT_SECRET=suits
-OPENAI_API_KEY=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
+API_KEY=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
+MODEL='gpt-3.5-turbo'
+# EXPRESS_PORT='3000' 
+# VITE_PORT='5173'
