--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "openai": "^3.3.0",
     "path": "^0.12.7"
   }
 }
