--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.3",
     "@tabler/icons-react": "^3.2.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "notistack": "^3.0.1",
